--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
 body {
     background-color: #fff;
     color: #000;
-    font-family: "Roboto Condensed", serif;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 .page-header {
