--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,18 @@ form {
     padding-bottom: 5%;
 }
 
+a:hover {
+    color: #8db173
+}
+
+a:link {
+    color: #8dba73
+}
+
+a:visited {
+    color: #8db073
+}
+
 .gradient {
     
     /* can be treated like a fallback */
@@ -38,3 +50,4 @@ form {
     /* these will reset other properties, like background-position, but it does know what you mean */
     background: red;
     background: linear-gradient(black, white);
+}
