--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,10 @@ body {
     font-family: "Roboto Condensed", serif;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
+    color: #000;
+}
+
 .page-header {
     padding-left: 5%;
     padding-right: 5%;
@@ -28,15 +32,15 @@ form {
 }
 
 a:hover {
-    color: #8db173
+    color: #8db173;
 }
 
 a:link {
-    color: #8dba73
+    color: #8dba73;
 }
 
 a:visited {
-    color: #8db073
+    color: #8db073;
 }
 
 .gradient {
@@ -45,9 +49,9 @@ a:visited {
     background-color: white;
     
     /* will be "on top", if browser supports it */
-    background-image: linear-gradient(black, white);
+    background-image: linear-gradient(#888, white);
     
     /* these will reset other properties, like background-position, but it does know what you mean */
     background: red;
-    background: linear-gradient(black, white);
+    background: linear-gradient(#888, white);
 }
