--- a/css/custom.css
+++ b/css/custom.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, h1 small, h2 small, h3 sma
     padding-top: 0%;
 }
 
-.col-md-6 {
+.col-md-3 {
     padding: 2%;
 }
 
@@ -76,7 +76,7 @@ a:visited {
     text-decoration: none;
 }
 
-.container, .guide-container, container, guide-container {
+.guide-container, guide-container {
     width: 50%;
     padding-left: 25px;
     background-color: #ddd;
