--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,7 @@
 body {
     color: #000;
     font-family: "Roboto Condensed", serif;
+    font-size: 12pt;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
